Revision history for Dist-Zilla-Plugin-ContributorsFromGit

{{$NEXT}}

0.006     2013-04-03 12:46:33 PDT-0700
	* add utf8 support (gh#4, thanks miyagawa)
	* ...and some (hopefully accurate) tests for said utf8 support

0.005     2013-02-28 06:00:00 PST-0800
	* ...and don't add an empty list of contributors (gh#2, thanks dagolden!)

0.004     2013-02-26 20:23:40 PST-0800
	* Add the list of contributors to META.* (gh#1, thanks dagolden!)

0.003     2012-12-27 21:42:43 CST6CDT
	* don't ABEND on no git, just skip tests and return early from the plugin

0.002     2012-12-02 13:52:34 PST8PDT
	* pod update -- note we run in the BeforeBuild phase
	* filter 'Your Name <you@example.com>' from the built list.  Really, we
	  need functionality to filter / consolidate, but this will work for now.

0.001     2012-11-25 01:41:41 PST8PDT
	* initial release